// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerInput should not render search in none mode 1`] = `
<div>
  <div
    class="container uui-input-box -clickable root size-36 mode-form"
    tabindex="0"
  >
    <div
      class="body multiline"
    >
      <input
        aria-haspopup="true"
        autocomplete="no"
        class="uui-input"
        placeholder="Please select "
        readonly=""
        tabindex="-1"
        type="text"
        value=""
      />
    </div>
    <div
      class="actions"
    >
      <div
        class="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      >
        <svg
          class="flipY"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PickerInput should render icon at specific position 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <div
        data-testid="test-icon"
      />
    </div>
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render icon at specific position 2`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <div
        data-testid="test-icon"
      />
    </div>
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render icon at specific position 3`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
    <div
      className="container uui-icon uui-enabled"
      style={Object {}}
    >
      <div
        data-testid="test-icon"
      />
    </div>
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render input as invalid 1`] = `
<div
  className="container uui-input-box uui-invalid -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input singleInput cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render search in body 1`] = `
<div>
  <div
    class="container uui-input-box -clickable root size-36 mode-form"
    tabindex="0"
  >
    <div
      class="body multiline"
    >
      <input
        aria-haspopup="true"
        autocomplete="no"
        class="uui-input"
        placeholder="Please select "
        readonly=""
        tabindex="-1"
        type="text"
        value=""
      />
    </div>
    <div
      class="actions"
    >
      <div
        class="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      >
        <svg
          class="flipY"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PickerInput should render search in input 1`] = `
<div>
  <div
    class="container uui-input-box -clickable root size-36 mode-form"
    tabindex="0"
  >
    <div
      class="body multiline"
    >
      <input
        aria-haspopup="true"
        autocomplete="no"
        class="uui-input cursorText"
        placeholder="Please select "
        tabindex="-1"
        type="text"
        value=""
      />
    </div>
    <div
      class="actions"
    >
      <div
        class="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      >
        <svg
          class="flipY"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PickerInput should render with maximum props 1`] = `
<div
  className="container uui-input-box -clickable root size-48 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <button
      className="container uui-button-box uui-enabled size-42 root"
      onClick={[Function]}
      tabIndex={-1}
      type="button"
    >
      <div
        className="uui-caption"
      >
        A1
      </div>
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </button>
    <button
      className="container uui-button-box uui-enabled size-42 root"
      onClick={[Function]}
      tabIndex={-1}
      type="button"
    >
      <div
        className="uui-caption"
      >
        A1+
      </div>
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
        style={Object {}}
      >
        <svg
          className=""
        />
      </div>
    </button>
  </div>
  <div
    className="actions"
  >
    <div
      aria-label="Clear"
      className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
      onClick={[Function]}
      role="button"
      style={Object {}}
      tabIndex={-1}
    >
      <svg
        className=""
      />
    </div>
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render with minimum props 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input singleInput cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render with mode = cell 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-cell"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render with mode = form 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render with mode = inline 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-inline"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should render with mode = undefined 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should support single line 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input cursorText"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={true}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-dropdown"
      onClick={[Function]}
      style={Object {}}
    >
      <svg
        className=""
      />
    </div>
  </div>
</div>
`;
